fix z-index on buttons

--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,6 @@
   background-position: center;
   min-height: 430px;
   height: 100vh;
-  z-index: -99;
 }
 .main-container{
   position: absolute;
@@ -14,7 +13,6 @@
   transform: translate(-50%, -30%);
   -webkit-transform: translate(-50%, -30%);
   -ms-transform: translate(-50%, -30%);
-  z-index: 1;
 }
 .window-container{
   width: 500px;
